--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^1.6.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "finnhub": "^2.0.12",
     "puppeteer": "^24.34.0"
   },
   "devDependencies": {
@@ -17,4 +21,3 @@
   "author": "",
   "license": "ISC"
 }
-
