--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@prisma/client": "^6.19.0",
     "axios": "^1.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "finnhub": "^2.0.12",
+    "prisma": "^6.19.0",
     "puppeteer": "^24.34.0"
   },
   "devDependencies": {
