--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "finnhub": "^2.0.12",
+    "node-cron": "^4.2.1",
     "prisma": "^6.19.0",
     "puppeteer": "^24.34.0"
   },
