--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "finnhub": "^2.0.12",
     "node-cron": "^4.2.1",
+    "openai": "^6.15.0",
     "prisma": "^6.19.0",
     "puppeteer": "^24.34.0"
   },
